Phase0+remaining: Java 21 optimizations (HexFormat, getFirst), null-guard extraction (DateUtils, ObjectUtils), logger consolidation (StoreService, AbstractGenericService), duplicate consolidation (ShoppingSavingsDomain.ZERO, CollectorUtils, EnumParser, LogSanitizer, StoreMapBuilder), ReceiptService catch merge, PriceWebAdapter doSearch split, PriceSummaryBatchScheduler config, ProductService delegation, event handler test fixes